--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   pointycastle: ^3.7.3
   flutter_secure_storage: ^9.0.0
   intl: any
+  socket_io_client: ^3.1.2
 
 dev_dependencies:
   flutter_test:
