--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,11 @@ dependencies:
   get: ^4.7.2
   flutter_easyloading: ^3.0.5
   infinite_scroll_pagination: ^5.1.1
-  pointycastle: ^3.7.3
+  pointycastle: ^4.0.0
   flutter_secure_storage: ^9.0.0
   intl: any
   socket_io_client: ^3.1.2
+  basic_utils: ^5.8.2
 
 dev_dependencies:
   flutter_test:
